# aqw-opcua-server

./: CMakeLists.txt  conanfile.txt
aqw-opcua-server/: CMakeLists.txt
src/: Application.cpp  CountryData.cpp  CountryData.h  LocationData.cpp
